--- a/02_optimal_transport_distance_flen.ipynb
+++ b/02_optimal_transport_distance_flen.ipynb
@@ -158,22 +158,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ##### generate a pairwise distance matrix and apply MDS\n",
-    "# otdistdf = pdist(X = controldf.T.to_numpy(), metric=ot_distance)\n",
+    "##### generate a pairwise distance matrix and apply MDS\n",
+    "otdistdf = pdist(X = controldf.T.to_numpy(), metric=ot_distance)\n",
     "\n",
-    "# mds = manifold.MDS(\n",
-    "#     n_components=2,\n",
-    "#     max_iter=3000,\n",
-    "#     eps=1e-9,\n",
-    "#     random_state=411,\n",
-    "#     dissimilarity=\"precomputed\",\n",
-    "#     n_jobs=1,\n",
-    "# )\n",
-    "# pos = mds.fit(squareform(otdistdf)).embedding_\n",
-    "# mdsdf = pd.DataFrame(data = pos, columns = [\"x\", \"y\"])\n",
-    "# mdsdf[\"SampleID\"] = controldf.columns\n",
-    "# mdsdf = mdsdf.merge(metadata[[\"SampleID\", \"Label\", \"Run\"]], right_on = \"SampleID\", left_on = \"SampleID\")\n",
-    "# sns.scatterplot(data = mdsdf, x = \"x\", y = \"y\", hue = \"Run\", style = \"Label\", legend = False)\n"
+    "mds = manifold.MDS(\n",
+    "    n_components=2,\n",
+    "    max_iter=3000,\n",
+    "    eps=1e-9,\n",
+    "    random_state=411,\n",
+    "    dissimilarity=\"precomputed\",\n",
+    "    n_jobs=1,\n",
+    ")\n",
+    "pos = mds.fit(squareform(otdistdf)).embedding_\n",
+    "mdsdf = pd.DataFrame(data = pos, columns = [\"x\", \"y\"])\n",
+    "mdsdf[\"SampleID\"] = controldf.columns\n",
+    "mdsdf = mdsdf.merge(metadata[[\"SampleID\", \"Label\", \"Run\"]], right_on = \"SampleID\", left_on = \"SampleID\")\n",
+    "sns.scatterplot(data = mdsdf, x = \"x\", y = \"y\", hue = \"Run\", style = \"Label\", legend = False)\n"
    ]
   },
   {
