--- a/02_optimal_transport_distance_EM.ipynb
+++ b/02_optimal_transport_distance_EM.ipynb
@@ -156,29 +156,45 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Dimension mismatch, check dimensions of M with a and b",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m##### generate a pairwise distance matrix and apply MDS\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m otdistdf \u001b[38;5;241m=\u001b[39m \u001b[43mpdist\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mcontroldf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mT\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_numpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmetric\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mot_distance\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m mds \u001b[38;5;241m=\u001b[39m manifold\u001b[38;5;241m.\u001b[39mMDS(\n\u001b[1;32m      5\u001b[0m     n_components\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m,\n\u001b[1;32m      6\u001b[0m     max_iter\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3000\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     10\u001b[0m     n_jobs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,\n\u001b[1;32m     11\u001b[0m )\n\u001b[1;32m     12\u001b[0m pos \u001b[38;5;241m=\u001b[39m mds\u001b[38;5;241m.\u001b[39mfit(squareform(otdistdf))\u001b[38;5;241m.\u001b[39membedding_\n",
+      "File \u001b[0;32m~/miniconda3/envs/pytorch/lib/python3.8/site-packages/scipy/spatial/distance.py:2235\u001b[0m, in \u001b[0;36mpdist\u001b[0;34m(X, metric, out, **kwargs)\u001b[0m\n\u001b[1;32m   2231\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m metric_info \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   2232\u001b[0m         X, typ, kwargs \u001b[38;5;241m=\u001b[39m _validate_pdist_input(\n\u001b[1;32m   2233\u001b[0m             X, m, n, metric_info, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m-> 2235\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_pdist_callable\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmetric\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmetric\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2236\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(metric, \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m   2237\u001b[0m     mstr \u001b[38;5;241m=\u001b[39m metric\u001b[38;5;241m.\u001b[39mlower()\n",
+      "File \u001b[0;32m~/miniconda3/envs/pytorch/lib/python3.8/site-packages/scipy/spatial/distance.py:2593\u001b[0m, in \u001b[0;36m_pdist_callable\u001b[0;34m(X, out, metric, **kwargs)\u001b[0m\n\u001b[1;32m   2591\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(X\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m   2592\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m, X\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]):\n\u001b[0;32m-> 2593\u001b[0m         dm[k] \u001b[38;5;241m=\u001b[39m \u001b[43mmetric\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2594\u001b[0m         k \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m   2595\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m dm\n",
+      "File \u001b[0;32m~/src/dist_feature_distance/helper_functions.py:58\u001b[0m, in \u001b[0;36mot_distance\u001b[0;34m(a, b, n)\u001b[0m\n\u001b[1;32m     55\u001b[0m M \u001b[38;5;241m=\u001b[39m ot\u001b[38;5;241m.\u001b[39mdist(x\u001b[38;5;241m.\u001b[39mreshape((n, \u001b[38;5;241m1\u001b[39m)), x\u001b[38;5;241m.\u001b[39mreshape((n, \u001b[38;5;241m1\u001b[39m)), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124meuclidean\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     56\u001b[0m M \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m=\u001b[39m M\u001b[38;5;241m.\u001b[39mmax() \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m0.1\u001b[39m\n\u001b[0;32m---> 58\u001b[0m d_emd \u001b[38;5;241m=\u001b[39m \u001b[43mot\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43memd2\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mM\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# direct computation of OT loss\u001b[39;00m\n\u001b[1;32m     59\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m d_emd\n",
+      "File \u001b[0;32m~/miniconda3/envs/pytorch/lib/python3.8/site-packages/ot/lp/__init__.py:509\u001b[0m, in \u001b[0;36memd2\u001b[0;34m(a, b, M, processes, numItermax, log, return_matrix, center_dual, numThreads, check_marginals)\u001b[0m\n\u001b[1;32m    506\u001b[0m b \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39masarray(b, dtype\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mfloat64)\n\u001b[1;32m    507\u001b[0m M \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39masarray(M, dtype\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mfloat64, order\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m--> 509\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m (a\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m==\u001b[39m M\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;129;01mand\u001b[39;00m b\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m==\u001b[39m M\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m]), \\\n\u001b[1;32m    510\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDimension mismatch, check dimensions of M with a and b\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    512\u001b[0m \u001b[38;5;66;03m# ensure that same mass\u001b[39;00m\n\u001b[1;32m    513\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m check_marginals:\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Dimension mismatch, check dimensions of M with a and b"
+     ]
+    }
+   ],
    "source": [
-    "# ##### generate a pairwise distance matrix and apply MDS\n",
-    "# otdistdf = pdist(X = controldf.T.to_numpy(), metric=ot_distance)\n",
+    "##### generate a pairwise distance matrix and apply MDS\n",
+    "otdistdf = pdist(X = controldf.T.to_numpy(), metric=ot_distance_em)\n",
     "\n",
-    "# mds = manifold.MDS(\n",
-    "#     n_components=2,\n",
-    "#     max_iter=3000,\n",
-    "#     eps=1e-9,\n",
-    "#     random_state=411,\n",
-    "#     dissimilarity=\"precomputed\",\n",
-    "#     n_jobs=1,\n",
-    "# )\n",
-    "# pos = mds.fit(squareform(otdistdf)).embedding_\n",
-    "# mdsdf = pd.DataFrame(data = pos, columns = [\"x\", \"y\"])\n",
-    "# mdsdf[\"SampleID\"] = controldf.columns\n",
-    "# mdsdf = mdsdf.merge(metadata[[\"SampleID\", \"Label\", \"Run\"]], right_on = \"SampleID\", left_on = \"SampleID\")\n",
-    "# sns.scatterplot(data = mdsdf, x = \"x\", y = \"y\", hue = \"Run\", style = \"Label\", legend = False)\n"
+    "mds = manifold.MDS(\n",
+    "    n_components=2,\n",
+    "    max_iter=3000,\n",
+    "    eps=1e-9,\n",
+    "    random_state=411,\n",
+    "    dissimilarity=\"precomputed\",\n",
+    "    n_jobs=1,\n",
+    ")\n",
+    "pos = mds.fit(squareform(otdistdf)).embedding_\n",
+    "mdsdf = pd.DataFrame(data = pos, columns = [\"x\", \"y\"])\n",
+    "mdsdf[\"SampleID\"] = controldf.columns\n",
+    "mdsdf = mdsdf.merge(metadata[[\"SampleID\", \"Label\", \"Run\"]], right_on = \"SampleID\", left_on = \"SampleID\")\n",
+    "sns.scatterplot(data = mdsdf, x = \"x\", y = \"y\", hue = \"Run\", style = \"Label\", legend = False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
