--- a/01_preprocess_feature_data.ipynb
+++ b/01_preprocess_feature_data.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1471/1471 [00:05<00:00, 265.20it/s]\n"
+      "100%|██████████| 1471/1471 [00:06<00:00, 242.58it/s]\n"
      ]
     }
    ],
@@ -60,6 +60,42 @@
     "metadata = metadata[metadata[\"SampleID\"].isin(maindf.columns)]\n",
     "metadata.to_csv(os.path.join(path_to_01_output, \"metadata.filtered.{}.csv\".format(feature_name)))\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1471/1471 [00:08<00:00, 163.81it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#####-----------------------------------------------------------------#####\n",
+    "##### Pre process the fragment length distribution feature\n",
+    "#####-----------------------------------------------------------------#####\n",
+    "feature_name = \"flen\"\n",
+    "all_flen_features = [item for item in pathlib.Path(path_to_feature).glob(\"*/*_GWfeature_{}.csv\".format(feature_name))]\n",
+    "\n",
+    "maindf = pd.DataFrame(data = range(1, 152), columns = [\"feat\"])\n",
+    "for file in tqdm(all_flen_features):\n",
+    "    tmpdf = pd.read_csv(file, index_col = [0])[[\"count\"]][50:201]\n",
+    "    tmpdf[\"feat\"] = range(1, 152)\n",
+    "    sampleid = file.name.split(\"_\")[0].split(\"-\")[1]\n",
+    "    tmpdf.columns = [sampleid, \"feat\"]\n",
+    "    tmpdf[sampleid] = tmpdf[sampleid].apply(lambda x: x/tmpdf[sampleid].sum())\n",
+    "    maindf = maindf.merge(tmpdf, right_on = \"feat\", left_on=\"feat\")\n",
+    "maindf = maindf.set_index(\"feat\")\n",
+    "\n",
+    "maindf = maindf[[item for item in maindf.columns if item in metadata[\"SampleID\"].values]]\n",
+    "for input_class in metadata[\"Label\"].unique():\n",
+    "    selecteddf = maindf[[item for item in maindf.columns if item in metadata[metadata[\"Label\"] == input_class][\"SampleID\"].values]]\n",
+    "    selecteddf.to_csv(os.path.join(path_to_01_output, \"{}.{}_151.csv\".format(input_class, feature_name)))\n"
    ]
   },
   {
