--- a/01_preprocess_feature_data.ipynb
+++ b/01_preprocess_feature_data.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1471/1471 [00:06<00:00, 242.58it/s]\n"
+      "100%|██████████| 1471/1471 [00:05<00:00, 279.84it/s]\n"
      ]
     }
    ],
@@ -52,7 +52,7 @@
     "    tmpdf.columns = [\"feat\", sampleid]\n",
     "    maindf = maindf.merge(tmpdf, right_on = \"feat\", left_on=\"feat\")\n",
     "maindf = maindf.set_index(\"feat\")\n",
-    "\n",
+    "maindf.to_csv(os.path.join(path_to_01_output, \"{}.csv\".format(feature_name)))\n",
     "maindf = maindf[[item for item in maindf.columns if item in metadata[\"SampleID\"].values]]\n",
     "for input_class in metadata[\"Label\"].unique():\n",
     "    selecteddf = maindf[[item for item in maindf.columns if item in metadata[metadata[\"Label\"] == input_class][\"SampleID\"].values]]\n",
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1471/1471 [00:08<00:00, 163.81it/s]\n"
+      "100%|██████████| 1471/1471 [00:08<00:00, 183.86it/s]\n"
      ]
     }
    ],
@@ -91,7 +91,7 @@
     "    tmpdf[sampleid] = tmpdf[sampleid].apply(lambda x: x/tmpdf[sampleid].sum())\n",
     "    maindf = maindf.merge(tmpdf, right_on = \"feat\", left_on=\"feat\")\n",
     "maindf = maindf.set_index(\"feat\")\n",
-    "\n",
+    "maindf.to_csv(os.path.join(path_to_01_output, \"{}.csv\".format(feature_name)))\n",
     "maindf = maindf[[item for item in maindf.columns if item in metadata[\"SampleID\"].values]]\n",
     "for input_class in metadata[\"Label\"].unique():\n",
     "    selecteddf = maindf[[item for item in maindf.columns if item in metadata[metadata[\"Label\"] == input_class][\"SampleID\"].values]]\n",
@@ -100,9 +100,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1471/1471 [00:15<00:00, 96.75it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "#####-----------------------------------------------------------------#####\n",
     "##### Pre process nucleosome footprint features\n",
@@ -120,7 +128,7 @@
     "    maindf = maindf.merge(tmpdf, right_on = \"feat\", left_on=\"feat\")\n",
     "    \n",
     "maindf = maindf.set_index(\"feat\")\n",
-    "\n",
+    "maindf.to_csv(os.path.join(path_to_01_output, \"{}.csv\".format(feature_name)))\n",
     "maindf = maindf[[item for item in maindf.columns if item in metadata[\"SampleID\"].values]]\n",
     "for input_class in metadata[\"Label\"].unique():\n",
     "    selecteddf = maindf[[item for item in maindf.columns if item in metadata[metadata[\"Label\"] == input_class][\"SampleID\"].values]]\n",
@@ -129,14 +137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1471/1471 [00:06<00:00, 215.34it/s]\n"
+      "100%|██████████| 1471/1471 [00:04<00:00, 301.91it/s]\n"
      ]
     }
    ],
@@ -147,14 +155,13 @@
     "feature_name = \"EM\"\n",
     "maindf = pd.DataFrame(data = [\"{}{}{}{}\".format(i,j,k,l) for i in [\"A\", \"T\", \"G\", \"C\"] for j in [\"A\", \"T\", \"G\", \"C\"] for k in [\"A\", \"T\", \"G\", \"C\"] for l in [\"A\", \"T\", \"G\", \"C\"]], columns = [\"feat\"])\n",
     "all_em_features = [item for item in pathlib.Path(path_to_feature).glob(\"*/*_GWfeature_{}.csv\".format(feature_name))]\n",
-    "for file in tqdm(all_nuc_features):\n",
+    "for file in tqdm(all_em_features):\n",
     "    sampleid = file.name.split(\"_\")[0].split(\"-\")[1]\n",
     "    tmpdf = pd.read_csv(file)[[\"motif\", \"freq\"]]\n",
     "    tmpdf.columns = [\"feat\", sampleid]\n",
     "    maindf = maindf.merge(tmpdf, right_on = \"feat\", left_on=\"feat\")\n",
-    "    \n",
     "maindf = maindf.set_index(\"feat\")\n",
-    "\n",
+    "maindf.to_csv(os.path.join(path_to_01_output, \"{}.csv\".format(feature_name)))\n",
     "maindf = maindf[[item for item in maindf.columns if item in metadata[\"SampleID\"].values]]\n",
     "for input_class in metadata[\"Label\"].unique():\n",
     "    selecteddf = maindf[[item for item in maindf.columns if item in metadata[metadata[\"Label\"] == input_class][\"SampleID\"].values]]\n",
