--- a/I02_distance_to_ref_control.ipynb
+++ b/I02_distance_to_ref_control.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,8 @@
     "data_version = \"20240807\"\n",
     "path_to_main_output = os.path.join(outdir, PROJECT, output_version)\n",
     "path_to_01_output = os.path.join(path_to_main_output, \"I01_output\")\n",
-    "os.makedirs(path_to_01_output, exist_ok = True)\n",
+    "path_to_02_output = os.path.join(path_to_main_output, \"I02_output\")\n",
+    "os.makedirs(path_to_02_output, exist_ok = True)\n",
     "\n",
     "path_to_metadata = \"/Users/hieunguyen/data/metadata/metadata_nonBS.csv\"\n",
     "metadata = pd.read_csv(path_to_metadata)\n",
@@ -58,7 +59,15 @@
     "training_control_barycenter = calculate_barycenter(controldf_train.to_numpy())\n",
     "\n",
     "##### calculate ground transportation cost matrix \n",
-    "m, n = 171, 256  # Example dimensions\n",
+    "all_features = [\"EM_FLEN\", \"EM_forwardNUC\", \"EM_reverseNUC\", \"FLEN_NUC\", \"pairEM\", \"pairEM.short\", \"pairEM.long\"]\n",
+    "if feature_name == \"EM_FLEN\"\n",
+    "    m, n = 171, 256  # Example dimensions\n",
+    "elif feature_name in [\"EM_forwardNUC\", \"EM_reverseNUC\"]:\n",
+    "    m, n = 256, 601\n",
+    "elif feature_name == \"FLEN_NUC\":\n",
+    "    m, n = 171, 601\n",
+    "elif feature_name in [\"pairEM\", \"pairEM.short\", \"pairEM.long\"]:\n",
+    "    m, n = 256, 256\n",
     "\n",
     "# Generate coordinates using numpy's meshgrid\n",
     "x = np.arange(m)\n",
@@ -69,19 +78,13 @@
     "coordinates = np.c_[xx.ravel(), yy.ravel()]\n",
     "\n",
     "M = ot.dist(coordinates, coordinates)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "##### caclulate the OT distance from testing samples to \"training samples\" barycenter\n",
     "resdf = pd.DataFrame(data = testing_samples, columns=[\"SampleID\"])\n",
     "resdf = resdf.merge(metadata[[\"SampleID\", \"Label\", \"Run\"]], right_on = \"SampleID\", left_on = \"SampleID\")\n",
-    "resdf[\"dist_to_ref\"] = resdf[\"SampleID\"].progress_apply(lambda x: calculate_ot_distance_to_ref(x, training_control_barycenter, testdf, n = maindf.shape[0], M = M))"
+    "resdf[\"dist_to_ref\"] = resdf[\"SampleID\"].progress_apply(lambda x: calculate_ot_distance_to_ref(x, training_control_barycenter, testdf, n = maindf.shape[0], M = M))\n",
+    "\n",
+    "resdf.to_csv(os.path.join(path_to_02_output, \"distance_to_control_{}.csv\".format(feature_name)))"
    ]
   }
  ],
